# world-engine

./: .env.example  .eslintrc.json  .gitignore  .hintrc  .markdownlint.json  CMakeLists.txt  ConsciousnessFeedbackVideoPlayer.tsx  Dependency_Adjacency__A_dep_.csv  ENHANCED_ENGINE_ROOM_RECOVERY.md  ERROR_FIX_SUMMARY.md  FEATURE_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_STATUS.md  LANGUAGE_COMMANDING_COMPLETE.md  LINGUISTIC_ANALYSIS_EXAMPLE.md  Latent_Feature_Loadings__H_.csv  Latent_Token_Loadings__W_.csv  Lexical_Feature_Matrix__F_.csv  MATHEMATICAL_UPGRADES_COMPLETE.md  NEXT_STEPS.md  NEXUS_COMPLETE_SYSTEM_OVERVIEW.md  NEXUS_MONETIZATION_STRATEGY.md  POS_One-Hot_Matrix__Y_pos_.csv  QUANTUM_VIDEO_PLAYER_GUIDE.md  QuantumFeaturePanel.cs  QuantumLore.cs  QuantumResourceEngine.js  QuantumVisuals.cs  RAG_DEBUG_PROTOCOL.md  RAG_SYSTEM_COMPLETE.md  README-glyph-integration-complete.md  README-integrated-system.md  README-nucleus-system.md  README.md  README_CLEANED.md  README_DEV.md  RESTART_GUIDE.md  Recursive_Epoch_Log.json  ResourceEngineCore.js  SNIPPET_README.md  (+221 more)
.github/: copilot-instructions.md
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/: App.tsx  CMakeLists.txt  GeoHexFlowerScene.tsx  README.md  SensoryDemo.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/ai/: WorldEngineRAG.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/bridge/: WorldEngineBridge.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/components/: R3FCompactToolbar.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/demos/: ColoredBoxDemo.tsx  GraphDemo.tsx  tier4_room_integration.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/financial/: CryptoDashboard.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/glyphs/: AdvancedGlyphSystem.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/javascript/: Untitled-1.js  Untitled-3.js  Untitled-5.js  nexus-dashboard.js  nexus-forge-unified.js  studio-bridge.js  world-engine-studio-server.js  🧪 Refined SVG Line-Creation Toolkit.js
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/layers/: GraphLayer.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/python/: README_4D_INTEGRATION.py  advanced-glyph-system.py  ai_bot_server.py  demo_limb_system.py  demo_pipeline.py  final_limb_demo.py  final_system_summary.py  fix_system_integration.py  integration-test.py  learning_curriculum.py  live_canvas_ai_demo.py  live_enhanced_training.py  main.py  meta_librarian_pipeline.py  nexus_communication_trainer.py  nexus_quantifier_trainer.py  nexus_unified_interactive.py  nexus_unified_safe.py  quantifier_nexus_trainer.py  test-interactive-codex.py  test_limb_integration.py  train_step.py  world_engine.py  world_engine_robust.py  world_engine_v4.py
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/scene/: SceneRoot.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/sensory/: LexiconEditor.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/shaders/: ColoredBoxShader.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/snips/: store.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/state/: graph.ts  ui.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/storage/: WorldEngineStorage.ts
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/styles/: globals.css
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/tools/: AccessibilityTool.tsx  CommandPalette.tsx  SensoryTool.tsx  ToolManager.tsx
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/types/: Math Pro.js  Meta - Programming & Self - Modification Pipeline.tsx  Untitled-1.js  Untitled-11.cpp  Untitled-3.js  Untitled-5.css  Untitled-7.json  bindings.cpp  chat-controller.js  estment advisors, algorithmic content en.py  qtp_module.cpp  reform my data into something that think.html  shape_mode.py  this what the neulues brain is merge wit.cpp  ttt.json
Documents/game101/Downloads/recovered_nucleus_eye/world-engine-feat-v3-1-advanced-math/src/typescript/: Automated word and code analysis system · world engine · GitHub Copilot Spaces.html  I've analyzed each component from your e.tsx  I've been meticulously integrating the u.tsx  Nexus Forge Enhanced.ts  comprehensive_coding_pad.ts  demo.py  extension_clean.ts  seeds.py  tier4_room_integration.ts
Layer3/quantum-thought/: pyproject.toml  qtp.pyi  setup.py
Layer3/quantum-thought/cpp/: quantum_thought_pipeline.hpp
Layer3/quantum-thought/python/: quantum_analytics.py
Layer3/quantum-thought/tests/: test_qtp_smoke.py
Layer4/applications/nexus-holy-beat-system/game-logic/: CMakeLists-updated.txt  CMakeLists.txt  NEXUS_GAME_ENGINE_GUIDE.md  test_integration.bat  test_integration.sh
Layer4/applications/nexus-holy-beat-system/game-logic/core/: NexusAreaEffects.hpp  NexusDashboardIntegration.hpp  NexusDeterministicTime.hpp  NexusEventReactions.hpp
Layer4/applications/nexus-holy-beat-system/game-logic/examples/: nexus_cognitive_demo.cpp  nexus_math_audio_vfx.cpp  nexus_nova_combat_demo.cpp  nexus_quantum_demo.cpp  nexus_resource_demo.cpp  test_bindings.js
Layer4/applications/nexus-holy-beat-system/game-logic/include/: GameEntity.hpp  NexusProfiler.hpp  NexusProtocol.hpp  NexusRecursiveKeeperEngine.hpp  NexusTrailRenderer.hpp  NexusVisuals.hpp  NexusWebSocketBridge.hpp
api/: __init__.py  (+1 more)
components/quantum-thought/: CMakeLists.txt
(+1000 files in other folders)
