[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "qtp"
version = "0.2.0"
description = "Quantum Thought Pipeline (C++ core) — Python bindings"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C++",
	"License :: OSI Approved :: MIT License"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.verbose = true

[tool.scikit-build.cmake]
build-type = "Release"
